clarify control description

--- a/controls/vulnerableapplication.json
+++ b/controls/vulnerableapplication.json
@@ -6,7 +6,7 @@
             "Initial Access"
         ]
     },
-    "description": "Running a vulnerable application in a cluster can enable an attacker initial access to the cluster. Determines if pods/deployments have vulnerable image using ARMO vulnerability scan (must run vulnerability scan before running posture scan). ",
+    "description": "Running a vulnerable application in a cluster can enable an attacker initial access to the cluster. This control determines if pods/deployments have vulnerable images using ARMO vulnerability scan (must run vulnerability scan before running posture scan). ",
     "remediation": "Patch your container with a version that does not have this vulnerability or use ARMO runtime protection (sign the workload).",
     "rulesNames": [
         "deny-vuln-image-pods"
