--- a/controls/vulnerableapplication.json
+++ b/controls/vulnerableapplication.json
@@ -14,5 +14,6 @@
     "id": "C-0024",
     "long_description": "Running a public-facing vulnerable application in a cluster can enable initial access to the cluster. A container that runs an application that is vulnerable to remote code execution vulnerability (RCE) may be exploited. If service account is mounted to the container (default behavior in Kubernetes), the attacker will be able to send requests to the API server using this service account credentials.",
     "test": "Searching the image from pod spec in the vulnerability scan database, if there is at least one high vulnerability we raise an alert.",
-    "controlID": "C-0024"
+    "controlID": "C-0024",
+    "baseScore": 6.0
 }
