Add posture configuration
- max_critical_vulnerabilities
- max_high_vulnerabilities

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -51,6 +51,8 @@
                 "kubeflow",
                 "kubernetes-dashboard"
             ],
+            "max_critical_vulnerabilities" : [ "5" ],
+            "max_high_vulnerabilities" : [ "10" ],
             "sensitiveKeyNames": [
                 "aws_access_key_id",
                 "aws_secret_access_key",
