--- a/inactive-controls/vulnerableapplication.json
+++ b/inactive-controls/vulnerableapplication.json
@@ -4,7 +4,17 @@
         "armoBuiltin": true,
         "microsoftMitreColumns": [
             "Initial Access"
-        ]
+        ],
+        "control-type-tags": [
+            "security",
+            "compliance"
+        ],
+        "attack-tracks": {
+            "container": [
+                "Execution",
+                "Initial access"
+            ]
+        }
     },
     "description": "Running a vulnerable application in a cluster can enable an attacker initial access to the cluster. This control determines if pods/deployments have vulnerable images using ARMO vulnerability scan (must run vulnerability scan before running posture scan). ",
     "remediation": "Upgrade your containers to not vulnerble versions or use ARMO runtime protection (sign/verify the workload in the runtime).",
