--- a/controls/C-0290-cve20251974nginxingressarbitrarycodeexecution.json
+++ b/controls/C-0290-cve20251974nginxingressarbitrarycodeexecution.json
@@ -11,7 +11,7 @@
   "controlID": "C-0290",
   "baseScore": 9.8,
   "category": {
-    "name": "Ingress"
+    "name": "Workload"
   },
   "scanningScope": {
     "matches": ["cluster", "file"]
